--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.15.0",
