--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
+    "react-focus-lock": "^2.9.5",
     "typescript": "5.1.6",
     "usehooks-ts": "^2.9.1"
   },
