--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-focus-lock": "^2.9.5",
+    "react-hot-toast": "^2.4.1",
     "typescript": "5.1.6",
     "usehooks-ts": "^2.9.1"
   },
