--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "date-fns": "^2.30.0",
     "downshift": "^8.1.0",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.0.3",
     "framer-motion": "^10.16.0",
     "jwt-decode": "^3.1.2",
-    "next": "13.4.19",
+    "next": "^14.0.3",
     "next-auth": "^4.23.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.16.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-focus-lock": "^2.9.5",
     "react-hot-toast": "^2.4.1",
     "typescript": "5.1.6",
