--- a/.github/workflows/nextjs_deploy_production.yml
+++ b/.github/workflows/nextjs_deploy_production.yml
@@ -4,29 +4,21 @@ on:
   push:
     branches:
       - main
-env:
-  NODE_VERSION: 20.x
 jobs:
   build-and-deploy:
-    name: Build and Deploy
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@main
-      - name: Use Node.js ${{ env.NODE_VERSION }}
+      - name: Checkout Source
+        uses: actions/checkout@v3
+      - name: Setup Node.js version
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
-      - name: npm install, build, and test
-        run: |
-          # Build and test the project, then
-          # deploy to Azure Web App.
-          npm install
-          npm run build --if-present
-          npm run test --if-present
-        working-directory: my-app-path
-      - name: Deploy to Azure WebApp
-        uses: azure/webapps-deploy@v3
+          node-version: 20.x
+      - name: Install Dependencies
+        run: npm install
+      - name: Deploy to Azure App Service
+        uses: azure/webapps-deploy@v2
         with:
-          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          app-name: nextjsgit
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+          package: .
