--- a/.github/workflows/nextjs_deploy_production.yml
+++ b/.github/workflows/nextjs_deploy_production.yml
@@ -17,6 +17,6 @@ jobs:
       - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v2
         with:
-          app-name: nextjsgit
+          app-name: KB-checker-nextjs-app
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: .
