--- a/.github/workflows/nextjs_deploy_production.yml
+++ b/.github/workflows/nextjs_deploy_production.yml
@@ -15,6 +15,10 @@ jobs:
           node-version: 20.x
       - name: Install Dependencies
         run: npm install
+      - name: Zip all files for upload between jobs
+        # IMPORTANT: .next is a hidden folder and will NOT be included in the zip unless we specify it
+        # To fix: /home/site/wwwroot/node_modules/.bin/next: 1: ../next/dist/bin/next: not found
+        run: zip next.zip ./* .next .env -qr
       - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v2
         with:
