--- a/.github/workflows/nextjs_deploy_production.yml
+++ b/.github/workflows/nextjs_deploy_production.yml
@@ -15,6 +15,8 @@ jobs:
           node-version: 20.x
       - name: Install Dependencies
         run: npm install
+      - name: Build
+        run: npm run build
       - name: Zip all files for upload between jobs
         # IMPORTANT: .next is a hidden folder and will NOT be included in the zip unless we specify it
         # To fix: /home/site/wwwroot/node_modules/.bin/next: 1: ../next/dist/bin/next: not found
