--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.19.6",
+    "prisma": "^5.10.2",
     "sass": "^1.71.1"
   }
 }
